kubedefs/backdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smarthrback
  labels: 
    app: smarthrback
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smarthrback
  template:
    metadata:
      labels:
        app: smarthrback
    spec:
      containers:
      - name: smarthrback
        image: anesbhd/smarthr-backend:latest
        imagePullPolicy: Always
        ports:
        - name: smarthrback-port
          containerPort: 9000
