kubedefs/dbdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smarthrdb
  labels:
    app: smarthrdb
spec:
  selector:
    matchLabels:
      app: smarthrdb
  replicas: 1
  template:
    metadata:
      labels:
        app: smarthrdb
    spec:
      containers:
      - name: smarthrdb
        image: anesbhd/smarthr-db:latest
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: smarthr-db-data
        ports:
        - name: smarthrdb-port 
          containerPort: 3306
      volumes:
        - name: smarthr-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
