kubedefs/redisdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smarthrcache
  labels:
    app: smarthrcache
spec:
  selector:
    matchLabels:
      app: smarthrcache
  replicas: 1
  template:
    metadata:
      labels:
        app: smarthrcache
    spec:
      containers:
      - name: smarthrcache
        image: redis:latest
        ports:
        - name: smarthrcache-port
          containerPort: 6379
