kubedefs/backservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: smarthrback-service
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: smarthrback
  type: ClusterIP
