kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: smarthrdb
spec:
  ports:
  - port: 3306
    targetPort: smarthrdb-port
    protocol: TCP
  selector:
    app: smarthrdb
  type: ClusterIP
