kubedefs/frontservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: smarthrfront-service
spec:
  ports:
  - port: 5173
    protocol: TCP
    targetPort: 5173
  selector:
    app: smarthrfront
  type: ClusterIP
