kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smarthr-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: smarthr.anesbhd.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smarthr-service
            port:
              number: 8080
